fixed layout issue for step 5 heading and div

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,10 @@
 /*.....................................Miscellaneous*/
 
 
-
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
 
 #results {
     display: none;
